--- a/Dice or Die/Resource1.resx
+++ b/Dice or Die/Resource1.resx
@@ -118,36 +118,39 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="victory_sound" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\orchestral-win-331233.mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="battle_music" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\0604131013.mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="damage_sound" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\Knife Stab Sound Effect (original).mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="menu_music" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\0604125021.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="player1_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\blue_transparent(1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="player2_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\red_transparent(1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="rolls" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Data\rolls.json;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-    <comment>The file that stores the details and effects of all rolls</comment>
+  <data name="damage_sound" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Knife Stab Sound Effect (original).mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="roll_dice_sound" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\Dice Cup Sound Effect.wav;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="shield_block_sound" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\swords-collide-230574 (1).mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="upgrades" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Data\upgrades.json;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
     <comment>The file that stores all the upgrades and their effects</comment>
   </data>
-  <data name="victory_sound" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\orchestral-win-331233.mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="player1_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\blue_transparent(1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="shield_block_sound" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\swords-collide-230574 (1).mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="rolls" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Data\rolls.json;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <comment>The file that stores the details and effects of all rolls</comment>
+  </data>
+  <data name="Image" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Image.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
