--- a/Dice or Die/Resource1.resx
+++ b/Dice or Die/Resource1.resx
@@ -152,4 +152,7 @@
   <data name="upgrades" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Data\upgrades.json;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="buysound" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\buysound.mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
